extends Node2D

@onready var item_slot1 = $SbInventory/item_slot1
@onready var item_slot2 = $SbInventory/item_slot2
@onready var item_slot3 = $SbInventory/item_slot3
@onready var item_slot4 = $SbInventory/item_slot4
@onready var item_slot5 = $SbInventory/item_slot5
@onready var item_slot6 = $SbInventory/item_slot6

func _ready() -> void:
	pass

func _physics_process(_delta: float) -> void:
	pass
